// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render bottom slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header">
    <div class="buri-card__content">
      <div></div>
      <div class="buri-card__bottom">Custom Bottom</div>
    </div>
  </div>
</div>
`;

exports[`render origin-price slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header">
    <div class="buri-card__content">
      <div></div>
      <div class="buri-card__bottom">
        <div class="buri-card__origin-price">Custom Origin Price</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render price & num slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header">
    <div class="buri-card__content">
      <div></div>
      <div class="buri-card__bottom">
        <div class="buri-card__price">Custom Price</div>
        <div class="buri-card__num">Custom Num</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render thumb & tag slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header"><a class="buri-card__thumb">Custom Thumb<div class="buri-card__tag">Custom Tag</div></a>
    <div class="buri-card__content">
      <div></div>
    </div>
  </div>
</div>
`;

exports[`render title & desc slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header">
    <div class="buri-card__content">
      <div>Custom TitleCustom desc</div>
    </div>
  </div>
</div>
`;

exports[`render price & price-top slot 1`] = `
<div class="buri-card">
  <div class="buri-card__header">
    <div class="buri-card__content">
      <div></div>
      <div class="buri-card__bottom">Custom Price-top<div class="buri-card__price">Custom Price</div>
      </div>
    </div>
  </div>
</div>
`;